# crankstart-klondike

./: Cargo.toml  Crank.toml  README.md
src/: klondike.rs  klondike_solver.rs  lib.rs
