[package]
name = "klondike"
version = "0.1.0"
authors = ["Rob Tsuk <rob@tsuk.com>"]
edition = "2018"

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0.31", default-features = false }
crankstart = { path = "../crankstart" }
crankstart-sys = { path = "../crankstart/crankstart-sys" }
hashbrown = "0.7.2"
enum-iterator = "0.6.0"
euclid = { version = "0.20.13", default-features = false, features = [ "libm" ] }
rand = { version = "", default-features = false, features = [ "alloc" ] }
rand_pcg = "0.2.1"
serde = { version = "1.0.114", default-features = false, features = [ "derive", "alloc" ] }
serde_json = {version = "1.0.57", default-features = false, features = [ "alloc" ] }

[target.'cfg(unix)'.dependencies]
argh = "0.1.3"
rayon = "1.3.1"
