[package]
name = "klondike"
version = "0.1.1"
authors = ["Rob Tsuk <rob@tsuk.com>"]
edition = "2018"

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0.66", default-features = false }
crankstart = { path = "../crankstart" }
crankstart-sys = { path = "../crankstart/crankstart-sys" }
hashbrown = "0.12.3"
enum-iterator = "0.8.1"
euclid = { version = "0.22.7", default-features = false, features = [ "libm" ] }
serde = { version = "1.0.147", default-features = false, features = [ "derive", "alloc" ] }
serde_json = {version = "1.0.87", default-features = false, features = [ "alloc" ] }
rand = { version = "0.8.5", default-features = false, features = [ "alloc" ] }
rand_pcg = "0.3.1"

[target.'cfg(unix)'.dependencies]
argh = "0.1.9"
rayon = "1.5.3"
